# container-orchestration

./: README.md
docker-compose/php-apache-server/: Dockerfile  docker-compose.yaml
docker-compose/php-apache-server/php/config/: php.ini  php.ini-production
docker-compose/php-apache-server/php/src/: index.php
docker-compose/python-poetry-fastapi-playwright/: docker-compose.yaml
docker-compose/python-poetry-fastapi-playwright/app/: Dockerfile  README.md  pyproject.toml
docker-compose/python-poetry-fastapi-playwright/app/app/: __init__.py
